# GEqTrain

./: .gitignore  CSCS.COMMANDS.md  CSCS.SETUP.md  LICENSE  README.md  check_installation.sh  create_val.py  dev.ipynb  geqtrain.sbatch  install.sh  personal_notes.txt  pyproject.toml  rm_dir.sh  setup.py  split_dataset.py  tutorial.ipynb
config/: example.yaml  qm9.yaml  qm9_debug.yaml  qm9_mu.yaml
geqtrain/: __init__.py
geqtrain/data/: AtomicData.py  AtomicDataDict.py  __init__.py  _build.py  _keys.py  dataloader.py  dataset.py
geqtrain/model/: __init__.py  _build.py  _combine.py  _dipole.py  _embedding.py  _equivariant_node_lvl_out_model.py  _global_graph_model.py  _global_model.py  _global_model_graph_lvl_pred.py  _global_node_model.py  _goten_model.py  _gradients.py  _grads.py  _graph.py  _graph_model.py  _heads.py  _hydra_build.py  _mace_model.py  _model.py  _module.py  _node_model.py  _recycle.py  _scalar_graph_lvl_out_model.py  _scale.py  _sph2cart.py  _weight_init.py  init_utils.py
geqtrain/nn/: AdaLN.py  EnsembleLayer.py  __init__.py  _combine.py  _ddp.py  _edge.py  _edgewise.py  _embedding.py  _embedding_attrs.py  _embedding_time.py  _equivariant_ln.py  _equivariant_scalar_mlp.py  _fc.py  _film.py  _grad_output.py  _gradient.py  _graph.py  _graph_mixin.py  _heads.py  _node.py  _nodewise.py  _norm.py  _output_heads.py  _output_scaler.py  _scale.py  cutoffs.py  goten.py  interaction.py  interaction_my_dev.py  kan.py  radial_basis.py  (+5 more)
tests/: __init__.py  cutoff_viz.ipynb
tutorial/: interaction_module_architecture.md  qm9_alpha.ipynb  qm9_build_dataset.py
(+112 files in other folders)
